# ggetpasswd

./: .gitignore  .markdownlint.json  CMakeLists.txt  LICENCE  README.md  mingw.cmake
docs/: building.md  options.md
include/: getpasswd.hpp  random.hpp
src/: getpasswd.cpp  main.cpp  random.cpp
